[gd_scene load_steps=15 format=3 uid="uid://dm1tuobfgeiku"]

[ext_resource type="Script" path="res://Scripts/Objects/CrumblingBridge.gd" id="1_p782g"]
[ext_resource type="Texture2D" uid="uid://bl11lujr3fota" path="res://Graphics/Objects/Levels/kv_platform_cracked.png" id="1_rbpsp"]
[ext_resource type="Texture2D" uid="uid://v6oqrok6nkfs" path="res://Graphics/Objects/Levels/kv_platform.png" id="2_34jl0"]
[ext_resource type="Texture2D" uid="uid://cjw02q1rkvgpt" path="res://Graphics/Particles/explosion.png" id="2_vst7b"]
[ext_resource type="Texture2D" uid="uid://dnlhapoheqjxf" path="res://Graphics/Particles/cloud.png" id="5_1gt48"]
[ext_resource type="AudioStream" uid="uid://m5ckf1gdi0mc" path="res://SFX/Crumble.WAV" id="6_8iq4p"]
[ext_resource type="AudioStream" uid="uid://x7u3ebugrlvg" path="res://SFX/gunshot2.wav" id="6_bseu3"]
[ext_resource type="Script" path="res://Scripts/Shared/HitboxNeutral.gd" id="8_tel6p"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_drg1q"]
bounce = 0.21

[sub_resource type="Curve" id="Curve_e7hbl"]
_data = [Vector2(0, 0), 0.0, 1.1179, 0, 1, Vector2(0.708215, 0.791713), 0.0, 0.0, 0, 0, Vector2(0.977337, 0.19558), -2.2151, 0.0, 1, 0]
point_count = 3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0twik"]
size = Vector2(192, 36.3138)

[sub_resource type="Gradient" id="Gradient_yrrgi"]
offsets = PackedFloat32Array(0.00615385, 0.187692, 0.704615, 1)
colors = PackedColorArray(1, 1, 1, 0, 0.32, 0.32, 0.32, 1, 0.62, 0.62, 0.62, 1, 1, 1, 1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p1kwy"]
size = Vector2(184, 18.2825)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80eni"]
size = Vector2(192, 20.3138)

[node name="CrumblingBridge" type="RigidBody2D"]
scale = Vector2(1, 0.98455)
physics_material_override = SubResource("PhysicsMaterial_drg1q")
freeze = true
freeze_mode = 1
script = ExtResource("1_p782g")

[node name="FallingDebris" type="CPUParticles2D" parent="."]
position = Vector2(0, 8.12554)
emitting = false
amount = 20
lifetime = 0.3
texture = ExtResource("2_vst7b")
emission_shape = 3
emission_rect_extents = Vector2(90, 1)
scale_amount_min = 0.01
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_e7hbl")
color = Color(0.258824, 0.258824, 0.258824, 1)

[node name="Platform1" type="Sprite2D" parent="."]
position = Vector2(-64, -12.1883)
scale = Vector2(1, 1.01569)
texture = ExtResource("1_rbpsp")

[node name="Platform2" type="Sprite2D" parent="."]
position = Vector2(-1.90735e-06, -12.1883)
scale = Vector2(1, 1.01569)
texture = ExtResource("2_34jl0")

[node name="Platform3" type="Sprite2D" parent="."]
position = Vector2(64, -12.1883)
scale = Vector2(1, 1.01569)
texture = ExtResource("1_rbpsp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.33514e-05, 1.90584)
shape = SubResource("RectangleShape2D_0twik")

[node name="CrumbleTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Dust" type="CPUParticles2D" parent="."]
emitting = false
amount = 10
one_shot = true
explosiveness = 0.55
texture = ExtResource("5_1gt48")
emission_shape = 3
emission_rect_extents = Vector2(100, 1)
direction = Vector2(0, -1)
gravity = Vector2(0, 50)
initial_velocity_min = 59.14
initial_velocity_max = 86.02
scale_amount_min = 0.25
color_ramp = SubResource("Gradient_yrrgi")

[node name="CrumbleCheck" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrumbleCheck"]
position = Vector2(7.51018e-06, -11.1726)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_p1kwy")
debug_color = Color(0.462745, 0.662745, 0.701961, 0.419608)

[node name="SfxCrumble" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_8iq4p")

[node name="SfxCrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_bseu3")

[node name="HitboxNeutral" type="Area2D" parent="."]
collision_mask = 4
script = ExtResource("8_tel6p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxNeutral"]
position = Vector2(0, 10.1569)
shape = SubResource("RectangleShape2D_80eni")
debug_color = Color(0.729412, 0.6, 0.701961, 0.419608)

[connection signal="timeout" from="CrumbleTimer" to="." method="_on_crumble_timer_timeout"]
[connection signal="body_entered" from="CrumbleCheck" to="." method="_on_crumble_check_body_entered"]
